# 3d_reconstruction_drone

./: .gitmodules  README.md
A-LOAM/rviz_cfg/: aloam_velodyne.rviz
A-LOAM/src/: scanRegistration.cpp
reconstruct/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
reconstruct/launch/: reconstruct.launch
reconstruct/src/: reconstruct_node.cpp  reconstruct_node.hpp
sjtu-drone/: CMakeLists.txt  package.xml
sjtu-drone/include/: DialogKeyboard.h  plugin_ros_laser.h
sjtu-drone/launch/: .project.launch.swp  .simple.launch.swp  project.launch  simple.launch  voxblox.launch
sjtu-drone/models/garching_kitchen/: model.sdf
sjtu-drone/src/: DialogKeyboard.cpp  drone_waypoints.cpp  plugin_ros_laser.cpp
sjtu-drone/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro  urdf_rviz.rviz  velodyne.xacro
sjtu-drone/worlds/: cafe.world  small_city.world
sjtu-drone_mariana/: CMakeLists.txt
sjtu-drone_mariana/launch/: simple.launch
sjtu-drone_mariana/src/: drone_keyboard.cpp
sjtu-drone_mariana/urdf/: sjtu_drone.urdf
sjtu_drone/launch/: project.launch  simple.launch
sjtu_drone/src/: drone_waypoints.cpp
